--- a/sonar-taller/pom.xml
+++ b/sonar-taller/pom.xml
@@ -12,7 +12,8 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <sonar.organization>rdzijj</sonar.organization>
-    <sonar.projectKey>SonnarCloud_QA</sonar.projectKey>
+    <sonar.projectKey>RdzJJ_SonnarCloud_QA</sonar.projectKey>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencies>
@@ -37,6 +38,29 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
+      </plugin>
+      
+      <!-- JaCoCo para cobertura (genera XML en target/site/jacoco/jacoco.xml) -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.10</version>
+        <executions>
+          <!-- Prepara el agente antes de ejecutar pruebas -->
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <!-- Genera el reporte (incluye XML) en la fase 'verify' -->
+          <execution>
+            <id>report</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
