--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,12 +38,33 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('sonar-taller/**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Build and analyze
+      - name: Show environment and tools
+        run: |
+          echo "Java version:"; java -version || true
+          echo "Maven version:"; mvn -v || true
+
+      - name: Build (run tests and generate reports)
+        run: mvn -B -DskipTests=false verify
+
+      - name: List jacoco output (diagnostic)
+        run: |
+          echo "Listing target/site/jacoco (if exists)";
+          ls -la target/site || true;
+          ls -la target/site/jacoco || true
+
+      - name: Check SONAR_TOKEN presence
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+        run: |
+          if [ -z "${SONAR_TOKEN}" ]; then echo "SONAR_TOKEN is empty"; exit 1; else echo "SONAR_TOKEN present"; fi
+
+      - name: Run SonarCloud analysis
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
           -Dsonar.projectKey=RdzJJ_SonnarCloud_QA \
           -Dsonar.organization=rdzijj \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.login=${{ env.SONAR_TOKEN }} \
-          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+          -Dsonar.verbose=true
