--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,10 +72,10 @@ jobs:
       - name: Run SonarCloud analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -Dsonar.projectKey=RdzJJ_SonnarCloud_QA \
+        run: mvn -B -Dsonar.projectKey=RdzJJ_SonnarCloud_QA \
           -Dsonar.organization=rdzijj \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.login=${{ env.SONAR_TOKEN }} \
           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
           -Dsonar.verbose=true \
-          org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+          sonar:sonar
