Updates SonarCloud organization in project settings
Corrects the SonarCloud organization ID used for project analysis.
This ensures that the project is correctly associated with the intended organization in SonarCloud.
The change involves updating the `sonar.organization` property in both the `pom.xml` file and the build workflow file, as well as the README.md.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,6 +75,7 @@ jobs:
           args: >
             -Dsonar.projectKey=RdzJJ_SonnarCloud_QA
             -Dsonar.organization=rdzijj
+              -Dsonar.organization=rdzjj
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
         env:
