--- a/sonar-taller/pom.xml
+++ b/sonar-taller/pom.xml
@@ -11,7 +11,7 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <sonar.organization>rdzijj</sonar.organization>
+  <sonar.organization>rdzjj</sonar.organization>
     <sonar.projectKey>RdzJJ_SonnarCloud_QA</sonar.projectKey>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
