Enhances build process and SonarCloud integration
Improves the build process by including compilation and testing steps explicitly.

Configures SonarCloud integration to specify the project base directory,
location of compiled Java binaries, and location of the JaCoCo coverage report.
This ensures accurate analysis and coverage reporting in SonarCloud.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,8 @@ jobs:
           echo "Java version:"; java -version || true
           echo "Maven version:"; mvn -v || true
 
-      - name: Build (run tests and generate reports)
-        run: mvn -B -DskipTests=false verify
+      - name: Build (compile, test and generate reports)
+        run: mvn -B clean compile test verify
 
       - name: List jacoco output (diagnostic)
         run: |
@@ -72,10 +72,12 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.0.0
         with:
+          projectBaseDir: sonar-taller
           args: >
             -Dsonar.projectKey=RdzJJ_SonnarCloud_QA
             -Dsonar.organization=rdzjj
             -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.java.binaries=target/classes
             -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
